--- a/“tensorflow_datasets”的副本.ipynb
+++ b/“tensorflow_datasets”的副本.ipynb
@@ -29,23 +29,12 @@
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
-        "id": "6XvCUmCEd4Dm"
+        "id": "USSV_OlCFKOD"
       },
       "source": [
-        "Codes from www.Tensorflow.org\n",
+        "Codes from www.tensorflow.org\n",
         "\n",
-        "Modified by JYI, 04/13/2020\n",
-        "\n",
-        "- TFDS provides a collection of ready-to-use datasets. It handles downloading and preparing the data and constructing a [`tf.data.Dataset`](https://www.tensorflow.org/api_docs/python/tf/data/Dataset).\n",
-        "- Do not confuse [TFDS](https://www.tensorflow.org/datasets) (this library) with [tf.data](https://www.tensorflow.org/guide/data) (TensorFlow API to build efficient data pipelines). TFDS is a high level wrapper around `tf.data`.\n",
-        "- Please include the following citation when using `tensorflow-datasets` for a paper, in addition to any citation specific to the used datasets.\n",
-        "\n",
-        "```\n",
-        "@misc{TFDS,\n",
-        "  title = { {TensorFlow Datasets}, A collection of ready-to-use datasets},\n",
-        "  howpublished = {\\url{https://www.tensorflow.org/datasets}},\n",
-        "}\n",
-        "```\n"
+        "Modified by JYI, 04/13/2020\n"
       ]
     },
     {
@@ -55,7 +44,7 @@
         "id": "J8y9ZkLXmAZc"
       },
       "source": [
-        "Copyright 2018 The TensorFlow Datasets Authors, Licensed under the Apache License, Version 2.0"
+        "Copyright 2020 The TensorFlow Datasets Authors, Licensed under the Apache License, Version 2.0"
       ]
     },
     {
@@ -67,51 +56,30 @@
       "source": [
         "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
         "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://www.tensorflow.org/datasets/overview\"><img src=\"https://www.tensorflow.org/images/tf_logo_32px.png\" />View on TensorFlow.org</a>\n",
+        "    <a target=\"_blank\" href=\"https://www.tensorflow.org/datasets/keras_example\"><img src=\"https://www.tensorflow.org/images/tf_logo_32px.png\" />View on TensorFlow.org</a>\n",
         "  </td>\n",
         "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/datasets/blob/master/docs/overview.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/datasets/blob/master/docs/keras_example.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
         "  </td>\n",
         "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://github.com/tensorflow/datasets/blob/master/docs/overview.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
+        "    <a target=\"_blank\" href=\"https://github.com/tensorflow/datasets/blob/master/docs/keras_example.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
         "  </td>\n",
         "</table>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "xLuLaJIYGajd"
-      },
-      "source": [
-        "## Eager execution\n",
-        "\n",
-        "- TensorFlow Datasets is compatible with both TensorFlow [Eager mode](https://www.tensorflow.org/guide/eager) and Graph mode\n",
-        "- difference between eager mode and graph mode? \n",
-        "- For this colab, we'll run in Eager mode, which is the default in TensorFlow 2.\n",
-        "- Each dataset is implemented as a [`tfds.core.DatasetBuilder`](https://www.tensorflow.org/datasets/api_docs/python/tfds/core/DatasetBuilder) and you can list all available builders with `tfds.list_builders()`.\n",
-        "- You can see all the datasets with additional documentation on the [datasets documentation page](https://www.tensorflow.org/datasets/catalog/overview)."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "id": "RxCjcc7wGaPQ",
+        "id": "TTBSvHcSLBzc",
         "colab": {}
       },
       "source": [
-        "!pip install -q tensorflow tensorflow-datasets matplotlib\n",
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
-        "import tensorflow as tf\n",
-        "\n",
+        "import tensorflow.compat.v2 as tf\n",
         "import tensorflow_datasets as tfds\n",
-        "tfds.disable_progress_bar()\n",
         "\n",
-        "tf.executing_eagerly()\n",
-        "tfds.list_builders() # give all the built dataset"
+        "tfds.disable_progress_bar()\n",
+        "tf.enable_v2_behavior()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -123,28 +91,70 @@
         "id": "VjI6VgOBf0v0"
       },
       "source": [
-        "## `tfds.load`: A dataset in one line\n",
+        "## Step 1: Create your input pipeline\n",
         "\n",
-        "- [`tfds.load`](https://www.tensorflow.org/datasets/api_docs/python/tfds/load) is a convenience method that's the simplest way to build and load a `tf.data.Dataset`.\n",
-        "- `tf.data.Dataset` is the standard TensorFlow API to build input pipelines. If you're not familiar with this API, we **strongly** encourage you to read [the official TensorFlow guide](https://www.tensorflow.org/guide/datasets).\n",
-        "- once data has been prepared, subsequent calls of `load` will reuse the prepared data.\n",
-        "- You can customize where the data is saved/loaded by specifying `data_dir=` (\n",
-        "defaults to `~/tensorflow_datasets/`).\n",
-        "- [documentation on datasets versioning](https://github.com/tensorflow/datasets/blob/master/docs/) for more details."
+        "- Build efficient input pipeline using advices from:\n",
+        "* [TFDS performance guide](https://www.tensorflow.org/datasets/performances)\n",
+        "* [tf.data performance guide](https://www.tensorflow.org/guide/data_performance#optimize_performance)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "c3aH3vP_XLI8"
+      },
+      "source": [
+        "- `shuffle_files`: The MNIST data is only stored in a single file, but for larger datasets with multiple files on disk, it's good practice to shuffle them when training.\n",
+        "- `as_supervised`: Returns tuple `(img, label)` instead of dict `{'image': img, 'label': label}`\n",
+        "* `ds.map`: TFDS provide the images as tf.uint8, while the model expect tf.float32, so normalize images\n",
+        "* `ds.cache` As the dataset fit in memory, cache before shuffling for better performance.<br/>\n",
+        "- Random transformations should be applied after caching\n",
+        "* `ds.shuffle`: For true randomness, set the shuffle buffer to the full dataset size.<br/>\n",
+        "- For bigger datasets which do not fit in memory, a standard value is 1000 if your system allows it.\n",
+        "* `ds.batch`: Batch after shuffling to get unique batches at each epoch.\n",
+        "* `ds.prefetch`: Good practice to end the pipeline by prefetching [for performances](https://www.tensorflow.org/guide/data_performance#prefetching).\n",
+        "- Testing pipeline is similar to the training pipeline, with small differences: No `ds.shuffle()` call; Caching is done after batching (as batches can be the same between epoch)"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "id": "dCou80mnLLPV",
+        "id": "ZUMhCXhFXdHQ",
         "colab": {}
       },
       "source": [
-        "ds_train = tfds.load(name=\"mnist\", split=\"train\")\n",
-        "assert isinstance(ds_train, tf.data.Dataset)\n",
+        "(ds_train, ds_test), ds_info = tfds.load(\n",
+        "    'mnist',\n",
+        "    split=['train', 'test'],\n",
+        "    shuffle_files=True,\n",
+        "    as_supervised=True,\n",
+        "    with_info=True,\n",
+        ")\n",
         "print(ds_train)\n",
-        "ds_all = tfds.load(\"mnist:3.*.*\")"
+        "\n",
+        "def normalize_img(image, label):\n",
+        "  \"\"\"Normalizes images: `uint8` -> `float32`.\"\"\"\n",
+        "  return tf.cast(image, tf.float32) / 255., label\n",
+        "\n",
+        "ds_train = ds_train.map(\n",
+        "    normalize_img, num_parallel_calls=tf.data.experimental.AUTOTUNE) # DatasetV1Adapter, (28,28,1)\n",
+        "print(ds_train)\n",
+        "ds_train = ds_train.cache() # DatasetV1Adapter, (28,28,1)\n",
+        "print(ds_train)\n",
+        "ds_train = ds_train.shuffle(ds_info.splits['train'].num_examples) # DatasetV1Adapter, (28,28,1)\n",
+        "print(ds_train)\n",
+        "ds_train = ds_train.batch(128) # DatasetV1Adapter, (None,28,28,1)\n",
+        "print(ds_train)\n",
+        "ds_train = ds_train.prefetch(tf.data.experimental.AUTOTUNE) # DatasetV1Adapter, (None,28,28,1)\n",
+        "print(ds_train)\n",
+        "\n",
+        "ds_test = ds_test.map(\n",
+        "    normalize_img, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
+        "ds_test = ds_test.batch(128)\n",
+        "ds_test = ds_test.cache()\n",
+        "ds_test = ds_test.prefetch(tf.data.experimental.AUTOTUNE)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -153,84 +163,38 @@
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
-        "id": "u-GAxR79hGTr"
+        "id": "nTFoji3INMEM"
       },
       "source": [
-        "## Feature dictionaries\n",
+        "## Step 2: Create and train the model\n",
         "\n",
-        "- All `tfds` datasets contain feature dictionaries mapping feature names to Tensor values. A typical dataset, like MNIST, will have 2 keys: `\"image\"` and `\"label\"`. Below we inspect a single example.\n",
-        "- how to access the values of samples\n",
-        "- In graph mode, see the [tf.data guide](https://www.tensorflow.org/guide/datasets#creating_an_iterator) to understand how to iterate on a `tf.data.Dataset`.\n",
-        "- define the rest of an input pipeline suitable for model training by using the [`tf.data` API](https://www.tensorflow.org/guide/datasets).\n",
-        "- we'll repeat the dataset so that we have an infinite stream of examples, shuffle, and create batches of 32."
+        "Plug the input pipeline into Keras."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "id": "YHE21nkHLrER",
+        "id": "XWqxdmS1NLKA",
         "colab": {}
       },
       "source": [
-        "# access sample value\n",
-        "for example in ds_train.take(1):  # Only take a single example\n",
-        "  image, label = example[\"image\"], example[\"label\"]\n",
+        "model = tf.keras.models.Sequential([\n",
+        "  tf.keras.layers.Flatten(input_shape=(28, 28, 1)),\n",
+        "  tf.keras.layers.Dense(128,activation='relu'),\n",
+        "  tf.keras.layers.Dense(10, activation='softmax')\n",
+        "])\n",
+        "model.compile(\n",
+        "    loss='sparse_categorical_crossentropy',\n",
+        "    optimizer=tf.keras.optimizers.Adam(0.001),\n",
+        "    metrics=['accuracy'],\n",
+        ")\n",
         "\n",
-        "  plt.imshow(image.numpy()[:, :, 0].astype(np.float32), cmap=plt.get_cmap(\"gray\"))\n",
-        "  print(\"Label: %d\" % label.numpy())\n",
-        "\n",
-        "# another way for loading dataset\n",
-        "mnist_builder = tfds.builder(\"mnist\")\n",
-        "mnist_builder.download_and_prepare()\n",
-        "ds_train = mnist_builder.as_dataset(split=\"train\")\n",
-        "ds_train\n",
-        "\n",
-        "# preprocessing for training\n",
-        "ds_train = ds_train.repeat().shuffle(1024).batch(32)\n",
-        "\n",
-        "# prefetch will enable the input pipeline to asynchronously fetch batches while\n",
-        "# your model is training.\n",
-        "ds_train = ds_train.prefetch(tf.data.experimental.AUTOTUNE)\n",
-        "\n",
-        "# Now you could loop over batches of the dataset and train\n",
-        "# for batch in ds_train:\n",
-        "#   ..."
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "uczpNuc_A7wE"
-      },
-      "source": [
-        "## DatasetInfo\n",
-        "\n",
-        "After generation, the builder contains useful information on the dataset:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "mSamfFznA9Ph",
-        "colab": {}
-      },
-      "source": [
-        "info = mnist_builder.info\n",
-        "print(info)\n",
-        "\n",
-        "print(info.features)\n",
-        "print(info.features[\"label\"].num_classes)\n",
-        "print(info.features[\"label\"].names)\n",
-        "\n",
-        "ds_test, info = tfds.load(\"mnist\", split=\"test\", with_info=True)\n",
-        "print(info)\n",
-        "\n",
-        "fig = tfds.show_examples(info, ds_test) # sample demonstration"
+        "model.fit(\n",
+        "    ds_train,\n",
+        "    epochs=6,\n",
+        "    validation_data=ds_test,\n",
+        ")"
       ],
       "execution_count": 0,
       "outputs": []
