--- a/Object_Detection_Sample_Code_JYI_20210712.ipynb
+++ b/Object_Detection_Sample_Code_JYI_20210712.ipynb
@@ -267,7 +267,7 @@
         "id": "-y9R0Xllefec"
       },
       "source": [
-        "\n",
+        "# model list, and image list\n",
         "\n",
         "ALL_MODELS = {\n",
         "'CenterNet HourGlass104 512x512' : 'https://tfhub.dev/tensorflow/centernet/hourglass_512x512/1',\n",
@@ -309,19 +309,6 @@
         "'Faster R-CNN Inception ResNet V2 640x640' : 'https://tfhub.dev/tensorflow/faster_rcnn/inception_resnet_v2_640x640/1',\n",
         "'Faster R-CNN Inception ResNet V2 1024x1024' : 'https://tfhub.dev/tensorflow/faster_rcnn/inception_resnet_v2_1024x1024/1',\n",
         "'Mask R-CNN Inception ResNet V2 1024x1024' : 'https://tfhub.dev/tensorflow/mask_rcnn/inception_resnet_v2_1024x1024/1'\n",
-        "}\n",
-        "\n",
-        "IMAGES_FOR_TEST = {\n",
-        "  'Beach' : 'models/research/object_detection/test_images/image2.jpg',\n",
-        "  'Dogs' : 'models/research/object_detection/test_images/image1.jpg',\n",
-        "  # By Heiko Gorski, Source: https://commons.wikimedia.org/wiki/File:Naxos_Taverna.jpg\n",
-        "  'Naxos Taverna' : 'https://upload.wikimedia.org/wikipedia/commons/6/60/Naxos_Taverna.jpg',\n",
-        "  # Source: https://commons.wikimedia.org/wiki/File:The_Coleoptera_of_the_British_islands_(Plate_125)_(8592917784).jpg\n",
-        "  'Beatles' : 'https://upload.wikimedia.org/wikipedia/commons/1/1b/The_Coleoptera_of_the_British_islands_%28Plate_125%29_%288592917784%29.jpg',\n",
-        "  # By Américo Toledano, Source: https://commons.wikimedia.org/wiki/File:Biblioteca_Maim%C3%B3nides,_Campus_Universitario_de_Rabanales_007.jpg\n",
-        "  'Phones' : 'https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Biblioteca_Maim%C3%B3nides%2C_Campus_Universitario_de_Rabanales_007.jpg/1024px-Biblioteca_Maim%C3%B3nides%2C_Campus_Universitario_de_Rabanales_007.jpg',\n",
-        "  # Source: https://commons.wikimedia.org/wiki/File:The_smaller_British_birds_(8053836633).jpg\n",
-        "  'Birds' : 'https://upload.wikimedia.org/wikipedia/commons/0/09/The_smaller_British_birds_%288053836633%29.jpg',\n",
         "}\n",
         "\n",
         "COCO17_HUMAN_POSE_KEYPOINTS = [(0, 1),\n",
@@ -508,7 +495,12 @@
       "source": [
         "\"\"\"\n",
         "JYI - Exploration of label map\n",
-        "\"\"\""
+        "\"\"\"\n",
+        "\n",
+        "# print(f\"category_index: {category_index}\")\n",
+        "# print(f\"category_index[2]: {category_index[2]}\")\n",
+        "# print(f\"category_index[2]['id']: {category_index[2]['id']}\")\n",
+        "# print(f\"category_index[2]['name']: {category_index[2]['name']}\")\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -549,6 +541,7 @@
         "id": "HtwrSqvakTNn"
       },
       "source": [
+        "# Select model\n",
         "model_display_name = 'CenterNet HourGlass104 Keypoints 512x512' \n",
         "model_handle = ALL_MODELS[model_display_name]\n",
         "\n",
@@ -603,7 +596,9 @@
       "source": [
         "\"\"\"\n",
         "JYI - Exploration of loaded model\n",
-        "\"\"\""
+        "\"\"\"\n",
+        "\n",
+        "print(f\"hub_model: {hub_model}\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -611,19 +606,75 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "hlGpyG10fQPg"
+      },
+      "source": [
+        "ToDos\n",
+        "\n",
+        "Documentations\n",
+        "- hub.load\n",
+        "- exploration of loaded model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "GIawRDKPPnd4"
       },
       "source": [
-        "## Loading an image\n",
+        "# Step: Loading an image\n",
         "\n",
-        "Let's try the model on a simple image. To help with this, we provide a list of test images.\n",
-        "\n",
-        "Here are some simple things to try out if you are curious:\n",
-        "* Try running inference on your own images, just upload them to colab and load the same way it's done in the cell below.\n",
-        "* Modify some of the input images and see if detection still works.  Some simple things to try out here include flipping the image horizontally, or converting to grayscale (note that we still expect the input image to have 3 channels).\n",
-        "\n",
-        "**Be careful:** when using images with an alpha channel, the model expect 3 channels images and the alpha will count as a 4th.\n",
+        "ToDos\n",
+        "- try difference images, ['Beach', 'Dogs', 'Naxos Taverna', 'Beatles', 'Phones', 'Birds']\n",
+        "- Try running inference on your own images, just upload them to colab and load the same way it's done in the cell below.\n",
+        "- Modify some of the input images and see if detection still works.  Some simple things to try out here include flipping the image horizontally, or converting to grayscale (note that we still expect the input image to have 3 channels).\n",
+        "- when using images with an alpha channel, the model expect 3 channels images and the alpha will count as a 4th.\n",
+        "- alpha channel\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cJN5dt7RgscC"
+      },
+      "source": [
+        "# utility functions\n",
+        "\n",
+        "# Flip horizontally\n",
+        "def horizontal_flip(image_np):\n",
+        "  \"\"\"\n",
+        "  image_np: a single image stored in numpy array\n",
+        "  \"\"\"\n",
+        "  image_np = np.fliplr(image_np).copy()\n",
+        "  return image_np\n",
+        "\n",
+        "# Flip vertical\n",
+        "\n",
+        "# Convert image to grayscale\n",
+        "def to_gray(image_np):\n",
+        "  \"\"\"\n",
+        "  image_np: a single image stored in numpy array\n",
+        "  \"\"\"\n",
+        "  image_np = np.tile(\n",
+        "      np.mean(image_np, 2, keepdims=True),\n",
+        "      (1, 1, 3)).astype(np.uint8)\n",
+        "  return image_np\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yYO3t18JhQ6M"
+      },
+      "source": [
+        "ToDos\n",
+        "\n",
+        "Documentations\n",
+        "- np.fliplr\n",
+        "- np.tile"
       ]
     },
     {
@@ -632,22 +683,27 @@
         "id": "hX-AWUQ1wIEr"
       },
       "source": [
-        "#@title Image Selection (don't forget to execute the cell!) { display-mode: \"form\"}\n",
-        "selected_image = 'Beach' # @param ['Beach', 'Dogs', 'Naxos Taverna', 'Beatles', 'Phones', 'Birds']\n",
-        "flip_image_horizontally = False #@param {type:\"boolean\"}\n",
-        "convert_image_to_grayscale = False #@param {type:\"boolean\"}\n",
+        "# image exploration\n",
+        "\n",
+        "IMAGES_FOR_TEST = {\n",
+        "  'Beach' : 'models/research/object_detection/test_images/image2.jpg',\n",
+        "  'Dogs' : 'models/research/object_detection/test_images/image1.jpg',\n",
+        "  # By Heiko Gorski, Source: https://commons.wikimedia.org/wiki/File:Naxos_Taverna.jpg\n",
+        "  'Naxos Taverna' : 'https://upload.wikimedia.org/wikipedia/commons/6/60/Naxos_Taverna.jpg',\n",
+        "  # Source: https://commons.wikimedia.org/wiki/File:The_Coleoptera_of_the_British_islands_(Plate_125)_(8592917784).jpg\n",
+        "  'Beatles' : 'https://upload.wikimedia.org/wikipedia/commons/1/1b/The_Coleoptera_of_the_British_islands_%28Plate_125%29_%288592917784%29.jpg',\n",
+        "  # By Américo Toledano, Source: https://commons.wikimedia.org/wiki/File:Biblioteca_Maim%C3%B3nides,_Campus_Universitario_de_Rabanales_007.jpg\n",
+        "  'Phones' : 'https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Biblioteca_Maim%C3%B3nides%2C_Campus_Universitario_de_Rabanales_007.jpg/1024px-Biblioteca_Maim%C3%B3nides%2C_Campus_Universitario_de_Rabanales_007.jpg',\n",
+        "  # Source: https://commons.wikimedia.org/wiki/File:The_smaller_British_birds_(8053836633).jpg\n",
+        "  'Birds' : 'https://upload.wikimedia.org/wikipedia/commons/0/09/The_smaller_British_birds_%288053836633%29.jpg',\n",
+        "}\n",
+        "\n",
+        "selected_image = 'Beach' \n",
+        "flip_image_horizontally = False \n",
+        "convert_image_to_grayscale = False \n",
         "\n",
         "image_path = IMAGES_FOR_TEST[selected_image]\n",
         "image_np = load_image_into_numpy_array(image_path)\n",
-        "\n",
-        "# Flip horizontally\n",
-        "if(flip_image_horizontally):\n",
-        "  image_np[0] = np.fliplr(image_np[0]).copy()\n",
-        "\n",
-        "# Convert image to grayscale\n",
-        "if(convert_image_to_grayscale):\n",
-        "  image_np[0] = np.tile(\n",
-        "    np.mean(image_np[0], 2, keepdims=True), (1, 1, 3)).astype(np.uint8)\n",
         "\n",
         "plt.figure(figsize=(24,32))\n",
         "plt.imshow(image_np[0])\n",
@@ -662,13 +718,18 @@
         "id": "FTHsFjR6HNwb"
       },
       "source": [
-        "## Doing the inference\n",
+        "# Step: Doing the inference\n",
         "\n",
-        "To do the inference we just need to call our TF Hub loaded model.\n",
+        "Tips\n",
+        "- Print out `result['detection_boxes']` and try to match the box locations to the boxes in the image.  Notice that coordinates are given in normalized form (i.e., in the interval [0, 1]).\n",
+        "- representation of detection boxes\n",
+        "- \n",
+        "- inspect other output keys present in the result. A full documentation can be seen on the models documentation page (pointing your browser to the model handle printed earlier)\n",
         "\n",
-        "Things you can try:\n",
-        "* Print out `result['detection_boxes']` and try to match the box locations to the boxes in the image.  Notice that coordinates are given in normalized form (i.e., in the interval [0, 1]).\n",
-        "* inspect other output keys present in the result. A full documentation can be seen on the models documentation page (pointing your browser to the model handle printed earlier)"
+        "ToDos\n",
+        "- retrain models\n",
+        "- transfer learning\n",
+        "- customized models\n"
       ]
     },
     {
@@ -691,16 +752,130 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "jSzuB5X7lcyV"
+      },
+      "source": [
+        "ToDos\n",
+        "- meaning of result['detection_scores']\n",
+        "- meaning of result['detection_keypoints']\n",
+        "\n",
+        "Tips\n",
+        "- the category_index is not for all the test images. Each test image may have its own category index set\n",
+        "- "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wD9EjIhikAVo"
+      },
+      "source": [
+        "\"\"\"\n",
+        "JYI - Inference results exploration\n",
+        "- \n",
+        "\"\"\"\n",
+        "\n",
+        "# detection_scores\n",
+        "# print(f\"result['detection_scores']: {result['detection_scores']}\")\n",
+        "# print(f\"result['detection_scores'] sum: {np.sum(result['detection_scores'])}\")\n",
+        "# plt.figure()\n",
+        "# plt.plot(result['detection_scores'][0]) # (100,1)\n",
+        "# plt.show()\n",
+        "\n",
+        "# detection_keypoints\n",
+        "# print(f\"result['detection_keypoints']: {result['detection_keypoints']}\")\n",
+        "# print(f\"result['detection_keypoints shape']: {result['detection_keypoints'].shape}\") # (1,100,17,2)\n",
+        "# print(f\"result['detection_keypoints range']: {np.max(result['detection_keypoints'])}, {np.min(result['detection_keypoints'])}\") # (1,100,17,2)\n",
+        "# plt.figure(figsize=(24,24))\n",
+        "# for row_ind in range(10):\n",
+        "#   for col_ind in range(10):\n",
+        "\n",
+        "#     temp_ind = row_ind*10 + col_ind\n",
+        "#     plt.subplot(10,10,temp_ind+1)\n",
+        "    \n",
+        "#     plt.plot(result['detection_keypoints'][0,temp_ind][:,0],\n",
+        "#              result['detection_keypoints'][0,temp_ind][:,1],'+')\n",
+        "# plt.show()\n",
+        "\n",
+        "# temp_ind =1 \n",
+        "# plt.figure()\n",
+        "# plt.plot(result['detection_keypoints'][0,1][:,0],\n",
+        "#          result['detection_keypoints'][0,1][:,1],\"+\")\n",
+        "# plt.show()\n",
+        "\n",
+        "# detection classes\n",
+        "# print(f\"result['detection_classes']: {result['detection_classes']}\")\n",
+        "# print(f\"result['detection_classes']: {result['detection_classes'].shape}\")\n",
+        "# print(f\"category_index: {category_index[result['detection_classes'][0,1]]}\")\n",
+        "# print(f\"category_index: {category_index[38]}\")\n",
+        "\n",
+        "# num_detections\n",
+        "# print(f\"result['num_detections']: {result['num_detections']}\")\n",
+        "\n",
+        "# detection_keypoint_scores\n",
+        "# print(f\"result['detection_keypoint_scores']: {result['detection_keypoint_scores']}\")\n",
+        "# print(f\"result['detection_keypoint_scores shape']: {result['detection_keypoint_scores'].shape}\")\n",
+        "# plt.figure()\n",
+        "# plt.subplot(2,1,1)\n",
+        "# plt.plot(result['detection_keypoint_scores'][0,1])\n",
+        "# print(f\"sum result['detection_keypoint_scores'][0,1]: {np.sum(result['detection_keypoint_scores'][0,1])}\")\n",
+        "# plt.subplot(2,1,2)\n",
+        "# plt.plot(result['detection_keypoint_scores'][0,:,1])\n",
+        "# print(f\"sum result['result['detection_keypoint_scores'][0,:,1]: {np.sum(result['detection_keypoint_scores'][0,:,1])}\")\n",
+        "# plt.show()\n",
+        "\n",
+        "# detection_boxes\n",
+        "# print(f\"result['detection_boxes']: {result['detection_boxes']}\")\n",
+        "#print(f\"result['detection_boxes shape']: {result['detection_boxes'].shape}\")\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p9BjqGusu9v1"
+      },
+      "source": [
+        "ToDos\n",
+        "- meaning of num_detections\n",
+        "- meaning of detection_keypoint_scores\n",
+        "- meaning of detection_boxes"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "IZ5VYaBoeeFM"
       },
       "source": [
-        "## Visualizing the results\n",
+        "# Step: Visualizing the results\n",
         "\n",
-        "Here is where we will need the TensorFlow Object Detection API to show the squares from the inference step (and the keypoints when available).\n",
+        "Tips\n",
+        "- we will need the TensorFlow Object Detection API to show the squares from the inference step (and the keypoints when available). [here](https://github.com/tensorflow/models/blob/master/research/object_detection/utils/visualization_utils.py)\n",
+        "- you can, for example, set `min_score_thresh` to other values (between 0 and 1) to allow more detections in or to filter out more detections.\n",
         "\n",
-        "the full documentation of this method can be seen [here](https://github.com/tensorflow/models/blob/master/research/object_detection/utils/visualization_utils.py)\n",
+        "ToDos\n",
+        "- \n",
         "\n",
-        "Here you can, for example, set `min_score_thresh` to other values (between 0 and 1) to allow more detections in or to filter out more detections."
+        "Documentations\n",
+        "- copy\n",
+        "- deepcopy\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qdxBIXWNxt97"
+      },
+      "source": [
+        "Tips\n",
+        "- in viz_utils.visualize_boxes_and_labels_on_image_array, the image input should not contain batch number dimension, and only a single image should be fed. Similarly, for detection_keypoints, detection_keypoints_scores, detection_boxes, detection_classes, detection_scores\n",
+        "- \n",
+        "\n",
+        "ToDos\n",
+        "- meaning of COCO17_HUMAN_POSE_KEYPOINTS\n",
+        "- what's return of viz_utils.visualize_boxes_and_labels_on_image_array"
       ]
     },
     {
@@ -712,12 +887,18 @@
         "label_id_offset = 0\n",
         "image_np_with_detections = image_np.copy()\n",
         "\n",
+        "# show image without boxes or labels or scores\n",
+        "plt.figure(figsize=(24,32))\n",
+        "plt.imshow(image_np_with_detections[0])\n",
+        "plt.show()\n",
+        "\n",
         "# Use keypoints if available in detections\n",
         "keypoints, keypoint_scores = None, None\n",
         "if 'detection_keypoints' in result:\n",
-        "  keypoints = result['detection_keypoints'][0]\n",
-        "  keypoint_scores = result['detection_keypoint_scores'][0]\n",
+        "  keypoints = result['detection_keypoints'][0] # (100,17,2)\n",
+        "  keypoint_scores = result['detection_keypoint_scores'][0] # (100,17)\n",
         "\n",
+        "# show image with boxes, labels, and scores\n",
         "viz_utils.visualize_boxes_and_labels_on_image_array(\n",
         "      image_np_with_detections[0],\n",
         "      result['detection_boxes'][0],\n",
@@ -745,11 +926,24 @@
         "id": "Qaw6Xi08NpEP"
       },
       "source": [
-        "## [Optional]\n",
+        "# Step: Segmentation\n",
         "\n",
-        "Among the available object detection models there's Mask R-CNN and the output of this model allows instance segmentation.\n",
+        "Tips\n",
+        "- Among the available object detection models there's Mask R-CNN and the output of this model allows instance segmentation. To visualize it we will use the same method we did before but adding an aditional parameter: `instance_masks=output_dict.get('detection_masks_reframed', None)`\n",
         "\n",
-        "To visualize it we will use the same method we did before but adding an aditional parameter: `instance_masks=output_dict.get('detection_masks_reframed', None)`\n"
+        "ToDos\n",
+        "- difference between object detection and segmentation\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1mV-y_UNzbcF"
+      },
+      "source": [
+        "Documentations\n",
+        "- tf.convert_to_tensor\n",
+        "- "
       ]
     },
     {
